# quassel

./: .gitignore  CMakeLists.txt  QuasselIRC.apparmor  manifest.json.in  version.h.in
android/: deployment-file.json.in
android/quasselclient/: AndroidManifest.xml
cmake/: AndroidTargets.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt  buffermodel.cpp  buffermodel.h  clientauthhandler.cpp  clientbacklogmanager.h  coreconnection.cpp  coreconnection.h  networkmodel.cpp
src/common/: eventmanager.h  identity.cpp  main.cpp  network.h  quassel.cpp  settings.cpp  syncableobject.h  transfer.h
src/qmlui/: CMakeLists.txt  chatlinemodel.cpp  chatlinemodel.h  chatlinemodelitem.cpp  chatlinemodelitem.h  mainwin.cpp  mainwin.h  monoapplication.cpp  monoapplication.h  qmlmessagemodel.cpp  qmlmessagemodel.h  qmlui.cpp  qmlui.h  qmluiaccountmodel.cpp  qmluiaccountmodel.h  qmluiapplication.cpp  qmluiapplication.h  qmluibuffermodel.cpp  qmluibuffermodel.h  qmluimessagemodel.cpp  qmluimessagemodel.h  qmluimessageprocessor.cpp  qmluimessageprocessor.h
src/qmlui/controls/: AccountSettings.qml  LoginView.qml  MainView.qml  MessageItem.qml  MessagesView.qml  StyledLabel.qml  qml.qrc
src/qmlui/controls2/: AccountSettings.qml  LoginView.qml  MainView.qml  MessageItem.qml  MessagesView.qml  StyledLabel.qml
src/qmlui/ubuntu/: AccountSettings.qml  BufferView.qml  CMakeLists.txt  HeaderExtensionLabel.qml  MainView.qml  MessageItem.qml  MessagesView.qml  QuasselIRC.desktop.in  ShortcutBubble.qml  StyledLabel.qml  ValueInput.qml  qml.qrc
src/qtui/: chatview.cpp  chatview.h  mainwin.cpp
src/qtui/settingspages/: bufferviewsettingspage.cpp
src/uisupport/: aboutdata.cpp  bufferviewfilter.cpp
